update password request form translations

--- a/apps/web/public/locales/tr/auth.json
+++ b/apps/web/public/locales/tr/auth.json
@@ -8,5 +8,12 @@
   "reset": "Sıfırlayın",
   "email": "E-posta",
   "password": "Şifre",
-  "login": "Giriş"
+  "login": "Giriş",
+  "if-account": "Hesabınız varsa",
+  "if-account-login": "Giriş yapın",
+  "send-email": "E-posta gönder",
+  "password-reset": {
+    "info": "Şifrenizi sıfırlamanız için gerekli talimatları e-posta ile göndereceğiz.",
+    "success": "Eğer bu e-posta ile kayıtlı bir hesabınız varsa, şifrenizi sıfırlamanız için gerekli talimatları e-posta ile göndereceğiz."
+  }
 }
