--- a/apps/web/public/locales/en/auth.json
+++ b/apps/web/public/locales/en/auth.json
@@ -8,5 +8,12 @@
   "reset": "Reset",
   "email": "E-mail",
   "password": "Password",
-  "login": "Login"
+  "login": "Login",
+  "if-account": "If you have an account",
+  "if-account-login": "Login",
+  "send-email": "Send Email",
+  "password-reset": {
+    "info": "We will send you an email with instructions to reset your password.",
+    "success": "If you have an account with this email address, we will send you an email with instructions to reset your password."
+  }
 }
