update register form translations

--- a/apps/web/public/locales/tr/auth.json
+++ b/apps/web/public/locales/tr/auth.json
@@ -15,5 +15,11 @@
   "password-reset": {
     "info": "Şifrenizi sıfırlamanız için gerekli talimatları e-posta ile göndereceğiz.",
     "success": "Eğer bu e-posta ile kayıtlı bir hesabınız varsa, şifrenizi sıfırlamanız için gerekli talimatları e-posta ile göndereceğiz."
-  }
+  },
+  "passwords-dont-match": "Şifreler eşleşmiyor",
+  "register-success": "Hesabınız oluşturuldu! Giriş sayfasına yönlendiriliyorsunuz.",
+  "name": "Adınız",
+  "username": "Kullanıcı Adınız",
+  "confirm-password": "Şifrenizi Doğrulayın",
+  "register": "Kaydol"
 }
