--- a/apps/web/public/locales/en/auth.json
+++ b/apps/web/public/locales/en/auth.json
@@ -15,5 +15,11 @@
   "password-reset": {
     "info": "We will send you an email with instructions to reset your password.",
     "success": "If you have an account with this email address, we will send you an email with instructions to reset your password."
-  }
+  },
+  "passwords-dont-match": "Passwords do not match",
+  "register-success": "Your account is created! You will be redirected to the login page.",
+  "name": "Name",
+  "username": "Username",
+  "confirm-password": "Confirm Password",
+  "register": "Register"
 }
