update category navigation translations

--- a/apps/web/public/locales/tr/appbar.json
+++ b/apps/web/public/locales/tr/appbar.json
@@ -15,5 +15,9 @@
     "privacy": "Gizlilik",
     "contact-us": "Bize Ulaşın",
     "logout": "Çıkış Yap"
+  },
+  "category": {
+    "scroll-left": "Sola kaydır",
+    "scroll-right": "Sağa kaydır"
   }
 }
