--- a/apps/web/public/locales/en/appbar.json
+++ b/apps/web/public/locales/en/appbar.json
@@ -15,5 +15,9 @@
     "privacy": "Privacy",
     "contact-us": "Contact Us",
     "logout": "Logout"
+  },
+  "category": {
+    "scroll-left": "Scroll left",
+    "scroll-right": "Scroll right"
   }
 }
