update landing hero translations

--- a/apps/web/public/locales/en/landing.json
+++ b/apps/web/public/locales/en/landing.json
@@ -3,5 +3,9 @@
     "new": "New",
     "text": "Introducing Horizon - your new address to find services.",
     "cta": "Sign up now"
+  },
+  "hero": {
+    "text1": "We are so back",
+    "text2": "It's so over"
   }
 }
