--- a/apps/web/public/locales/en/settings.json
+++ b/apps/web/public/locales/en/settings.json
@@ -37,5 +37,28 @@
     "update-ok": "Updated successfully",
     "update-err": "Something went wrong",
     "results": "Results"
+  },
+  "profile": {
+    "title": "Profile Settings",
+    "about-you": "About You",
+    "contact-information": "Contact Information",
+    "contact-information-hint": "The information you provide here will be visible to all users.",
+    "update-ok": "Updated successfully!",
+    "update-err": "Something went wrong",
+    "contact-email": "Contact Email",
+    "phone": "Phone Number",
+    "phone-placeholder": "Enter a phone number",
+    "address": "Address",
+    "other": "Other",
+    "other-placeholder": "Other information you may want your client's to know.",
+    "other-hint": "You can provide any additional information here.",
+    "update": "Update",
+    "name": "Your Name",
+    "about-you-placeholder": "Tell us more about yourself.",
+    "about-you-hint": "Write to express your potential customers. Introduce yourself, list your achievements, or write about the services you provide.",
+    "gender": "Gender",
+    "gender-placeholder": "Your gender",
+    "gender-hint": "Some users may prefer to see your gender depending on the provided service. You are free to use your own words or to leave it empty.",
+    "upload": "Upload"
   }
 }
