add translation files for pages

--- a/apps/web/public/locales/en/auth.json
+++ b/apps/web/public/locales/en/auth.json
@@ -21,5 +21,15 @@
   "name": "Name",
   "username": "Username",
   "confirm-password": "Confirm Password",
-  "register": "Register"
+  "register": "Register",
+  "login-title": "Login Now.",
+  "password-reset-title": "Forgot your password?",
+  "register-title": "Register Now.",
+  "verify-email": {
+    "title": "Verify Your Email",
+    "info": "Before you start using Horizon, you need to verify your email address.",
+    "ok": "Please check your inbox.",
+    "email": "E-mail",
+    "btn": "Send Verification Email"
+  }
 }
