--- a/apps/web/public/locales/tr/auth.json
+++ b/apps/web/public/locales/tr/auth.json
@@ -21,5 +21,15 @@
   "name": "Adınız",
   "username": "Kullanıcı Adınız",
   "confirm-password": "Şifrenizi Doğrulayın",
-  "register": "Kaydol"
+  "register": "Kaydol",
+  "login-title": "Giriş Yap.",
+  "password-reset-title": "Şifrenizi mi unuttunuz?",
+  "register-title": "Şimdi Kaydol.",
+  "verify-email": {
+    "title": "E-postanızı Doğrulayın",
+    "info": "Horizon'ı kullanmaya başlamadan önce e-posta adresinizi onaylamanız gerekmektedir.",
+    "ok": "Gelen kutunuzu kontrol edin.",
+    "email": "E-posta",
+    "btn": "Doğrulama Postasını Gönder"
+  }
 }
