--- a/apps/web/public/locales/tr/user.json
+++ b/apps/web/public/locales/tr/user.json
@@ -8,5 +8,12 @@
   "block-report": "Engelle veya bildir",
   "about": "Hakkında",
   "no-description": "Açıklama yok",
-  "empty-result": "Aaa! Burası bomboş."
+  "empty-result": "Aaa! Burası bomboş.",
+  "share": {
+    "copy-ok": "Panoya kopyalandı",
+    "check": "Horizon'da {{name}} profilini görüntüleyin: {{url}}",
+    "copy": "Panoya kopyala",
+    "twitter": "Twitter'da paylaş",
+    "linkedin": "LinkedIn'de paylaş"
+  }
 }
