--- a/apps/web/public/locales/en/appbar.json
+++ b/apps/web/public/locales/en/appbar.json
@@ -17,6 +17,7 @@
     "logout": "Logout"
   },
   "category": {
+    "description": "Category Navigation Menu",
     "scroll-left": "Scroll left",
     "scroll-right": "Scroll right"
   },
