--- a/apps/web/public/locales/en/common.json
+++ b/apps/web/public/locales/en/common.json
@@ -15,6 +15,8 @@
     "accept": "Accept All"
   },
   "footer": {
+    "category-description": "Categories",
+    "description": "Footer navigation",
     "about": "About",
     "blog": "Blog",
     "faq": "FAQ",
