--- a/apps/web/public/locales/tr/common.json
+++ b/apps/web/public/locales/tr/common.json
@@ -15,6 +15,8 @@
     "accept": "Kabul Et"
   },
   "footer": {
+    "category-description": "Kategoriler",
+    "description": "Alt bilgiler",
     "about": "Hakkımızda",
     "blog": "Blog",
     "faq": "SSS",
