--- a/apps/web/public/locales/en/auth.json
+++ b/apps/web/public/locales/en/auth.json
@@ -30,6 +30,7 @@
     "info": "Before you start using Horizon, you need to verify your email address.",
     "ok": "Please check your inbox.",
     "email": "E-mail",
-    "btn": "Send Verification Email"
+    "btn": "Send Verification Email",
+    "logout": "Logout"
   }
 }
