--- a/apps/web/public/locales/tr/auth.json
+++ b/apps/web/public/locales/tr/auth.json
@@ -30,6 +30,7 @@
     "info": "Horizon'ı kullanmaya başlamadan önce e-posta adresinizi onaylamanız gerekmektedir.",
     "ok": "Gelen kutunuzu kontrol edin.",
     "email": "E-posta",
-    "btn": "Doğrulama Postasını Gönder"
+    "btn": "Doğrulama Postasını Gönder",
+    "logout": "Çıkış yap"
   }
 }
