--- a/apps/web/public/locales/tr/common.json
+++ b/apps/web/public/locales/tr/common.json
@@ -26,7 +26,11 @@
     "twitter": "Twitter",
     "linkedin": "LinkedIn",
     "github": "GitHub",
-    "copy": "Tüm hakları saklıdır."
+    "copy": "Tüm hakları saklıdır.",
+    "lang": {
+      "en": "İngilizce",
+      "tr": "Türkçe"
+    }
   },
   "quick-actions": {
     "cards": [
