--- a/apps/web/public/locales/en/categories.json
+++ b/apps/web/public/locales/en/categories.json
@@ -147,5 +147,9 @@
     {
       "title": "Product reviews and recommendations"
     }
-  ]
+  ],
+  "explore": {
+    "breadcrumb": "Categories",
+    "title": "Explore All Services"
+  }
 }
