--- a/apps/web/public/locales/tr/categories.json
+++ b/apps/web/public/locales/tr/categories.json
@@ -147,5 +147,9 @@
     {
       "title": "Ürün inceleme ve tavsiyeleri"
     }
-  ]
+  ],
+  "explore": {
+    "breadcrumb": "Kategoriler",
+    "title": "Tüm Kategorileri Keşfedin"
+  }
 }
