--- a/apps/web/public/locales/tr/categories.json
+++ b/apps/web/public/locales/tr/categories.json
@@ -149,7 +149,8 @@
     }
   ],
   "explore": {
-    "breadcrumb": "Kategoriler",
+    "services": "Servisler",
+    "categories": "Kategoriler",
     "title": "Tüm Kategorileri Keşfedin"
   }
 }
