--- a/apps/web/public/locales/tr/user.json
+++ b/apps/web/public/locales/tr/user.json
@@ -15,5 +15,6 @@
     "copy": "Panoya kopyala",
     "twitter": "Twitter'da paylaş",
     "linkedin": "LinkedIn'de paylaş"
-  }
+  },
+  "services": "Servisler"
 }
