--- a/apps/web/public/locales/en/user.json
+++ b/apps/web/public/locales/en/user.json
@@ -15,5 +15,6 @@
     "copy": "Copy to your clipboard",
     "twitter": "Share on Twitter",
     "linkedin": "Share on LinkedIn"
-  }
+  },
+  "services": "Services"
 }
